# teletwix

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
src/: bot.rs  main.rs  url_parser.rs
